# humio

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: plan_compound_failures.md  plan_failure_recovery_recursion.md
src/: error.rs  lib.rs  mock.rs  physical_device.rs
src/humanizer/: delay.rs  device.rs  failures.rs  keyboard.rs  mod.rs  mouse.rs  target_area.rs  wind_mouse.rs
tests/: integration_tests.rs
