[package]
name = "humio"
version = "0.1.0"
edition = "2024"
description = "Humanized input simulation for Rust scripting — realistic mouse movement, keyboard typing, and failure injection with configurable recovery."
license = "MIT"
repository = "https://github.com/trrt004/humio"
keywords = ["input", "automation", "humanizer", "mouse", "keyboard"]
categories = ["simulation", "os"]
readme = "README.md"

[dependencies]
enigo = "0.6"
rand = "0.10"
log = "0.4"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
] }

[lints.clippy]
pedantic = "deny"
